# vyauma-vre

./: .gitignore  Cargo.toml  README.md  async_server.vy  async_server_stdlib.vy  check.rs  dict_test.vy  ffi_test.vy  fix_parser.py  format_phases.py  gc_test.vy  http_server.vy  init_vre.sh  json_test.vy  math.vy  patch_asm.py  patch_compiler.py  patch_std_export.py  patch_tc.py  phase30_php_output.txt  phase30_py_output.txt  py_import.py  refactor_tokens.py  revert_tokens.py  sample.bytecode  string_test.vy  temp_db.js  temp_db.py  temp_task.js  temp_test.rs  temp_timer.js  test.js  test.txt  test.vya  test.vym  test_array.js  test_array.php  test_auth.vym  test_basic.php  test_call.js  (+32 more)
.github/workflows/: ci.yml
RFCs/: README.md  template.md
crates/vfmt/: Cargo.toml
crates/vfmt/src/: formatter.rs  main.rs
crates/vpm/: Cargo.toml
crates/vpm/src/: install.rs  lockfile.rs  main.rs  manifest.rs  registry.rs  resolver.rs
crates/vre-asm/: Cargo.toml
crates/vre-asm/src/: assembler.rs  main.rs
crates/vre-cli/: Cargo.toml
crates/vre-cli/src/: cli.rs  dap.rs  doc.rs  init.rs  lsp.rs  main.rs  manifest.rs  module_loader.rs  native.rs  profiler.rs  registry.rs  registry_legacy.rs  test_runner.rs  web.rs
crates/vre-cli/src/cloud/: docker.rs  k8s.rs  mod.rs  serverless.rs
crates/vre-cli/src/commands/: build.rs  build_web.rs  check.rs  dap.rs  debug.rs  deploy.rs  doc.rs  doctor.rs  flash.rs  info.rs  init.rs  install.rs  lsp.rs  mobile.rs  mod.rs  new.rs  package.rs  profile.rs  publish.rs  run.rs  search.rs  test.rs  uninstall.rs  upgrade.rs  version.rs
crates/vre-cli/src/config/: mod.rs  vre_toml.rs
crates/vre-cli/src/diagnostics/: codes.rs  mod.rs
crates/vre-cli/src/embedded/: esp32.rs  mod.rs  rpi.rs
crates/vre-cli/src/mobile/: android.rs  ios.rs  mod.rs
crates/vre-cli/src/registry/: client.rs  mod.rs
crates/vre-cli/src/templates/: builtin.rs  mod.rs
crates/vre-cli/tests/: integration_tests.rs
crates/vre-compiler/: Cargo.toml
crates/vre-compiler/src/: ast.rs  compiler.rs  lexer.rs  lexer_indent.rs  lib.rs  optimizer.rs  parser.rs  parser_indent.rs  type_checker.rs
crates/vre-compiler/src/php_frontend/: lower.rs  mod.rs
crates/vre-compiler/src/py_frontend/: lower.rs  mod.rs
crates/vre-compiler/src/ts_frontend/: lower.rs  mod.rs  tests.rs
crates/vre-compiler/src/vir/: builder.rs  codegen.rs  mod.rs
crates/vre-compiler/src/vir/opt/: constant_fold.rs  dce.rs  mod.rs
crates/vre-core/: Cargo.toml
crates/vre-core/src/: config.rs  crypto.rs  db.rs  error.rs  hal.rs  lib.rs  metrics.rs  pal.rs  pal_android.rs  pal_ios.rs  vol.rs  wasm.rs
crates/vre-core/src/bytecode/: instruction.rs  mod.rs  opcode.rs
crates/vre-core/src/capability/: capability.rs  mod.rs  os_abstraction.rs  registry.rs
crates/vre-core/src/distributed/: actor.rs  cluster.rs  mod.rs  rpc.rs
crates/vre-core/src/jit/: compiler.rs  memory.rs  mod.rs
crates/vre-core/src/loader/: loader.rs  mod.rs
crates/vre-core/src/module/: mod.rs
crates/vre-core/src/plugin/: mod.rs
crates/vre-core/src/scheduler/: mod.rs
crates/vre-core/src/vm/: memory.rs  mod.rs  stack.rs  value.rs  vm.rs
crates/vre-core/src/vm/api/: db.rs  fs.rs  http.rs  json.rs  mod.rs  tests.rs  timers.rs
crates/vre-core/tests/: async_runtime_tests.rs  heap_leak_tests.rs  jit_tests.rs  pal_tests.rs  scc_summary.rs  vm_tests.rs
crates/vre-debug/: Cargo.toml
crates/vre-debug/src/: main.rs
crates/vre-vol/: Cargo.toml
crates/vre-vol/src/: lib.rs  main.rs  policy.rs
crates/vre-vol/tests/: lenient_integration.rs
crates/vyauma-analyzer/: Cargo.toml
crates/vyauma-analyzer/src/: main.rs  server.rs
crates/vyauma-frontend/: Cargo.toml
crates/vyauma-frontend/src/: ast.rs  lexer.rs  lib.rs  parser.rs  resolver.rs
crates/vyauma-registry/: Cargo.toml
crates/vyauma-registry/src/: main.rs
crates/vyauma-vm/: Cargo.toml
crates/vyauma-vm/src/: chunk.rs  compiler.rs  heap.rs  lib.rs  (+3 more)
deploy/docker/: .dockerignore  Dockerfile
deploy/k8s/: deployment.yaml  service.yaml
deploy/serverless/: bootstrap  serverless.yml
docs/: CERTIFICATION.md  phases.md  spec-bytecode-v0.1.md
my_vyauma_app/: vyauma.toml
my_vyauma_app/docs_out/: index.html
my_vyauma_app/src/: main.vya
std/: array.vym  console.vym  crypto.vym  fs.vym  json.vym  math.vym  os.vym  std.vym  string.vym
std/collections/: array.vya  map.vya  queue.vya  set.vya  stack.vya
std/utils/: math.vya  string.vya
stdlib/: binary.vym  collections.vym  crypto.vym  db.vym  env.vym  fs.vym  http.vym  io.vym  json.vym  math.vym  net.vym  process.vym  string.vym  time.vym  toml.vym  xml.vym  yaml.vym
vre_data/: products.json  users.json
vyauma_modules/db/: index.vya
vyauma_modules/mock_db/: index.ts
vyauma_modules/mock_utils/: index.ts
vyauma_modules/mod_spawn/: index.js
vyauma_modules/py_export/: index.py
vyauma_modules/web/: index.vya
web_dist/: index.html
(+7 files in other folders)
