[package]
name = "vpm"
version = "0.2.0"
edition = "2021"
description = "Vyauma Package Manager"
license = "Apache-2.0"

[[bin]]
name = "vpm"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ureq = { version = "2.10", features = ["tls"] }
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
