[package]
name = "vre-cli"
version = "0.2.0"
edition = "2021"
description = "Vyauma Runtime Engine — CLI tool (`vre`) and interactive debugger (`vre-debug`)"
license = "Apache-2.0"

[[bin]]
name = "vre"
path = "src/main.rs"

[[bin]]
name = "vre-debug"
path = "src/bin/vre-debug.rs"

[dependencies]
vre-core = { path = "../vre-core" }
vre-compiler = { path = "../vre-compiler" }
serde_json = "1.0"
