[package]
name = "vre-cli"
version = "0.2.0"
edition = "2021"
description = "Vyauma Runtime Engine — CLI tool (`vre`) and interactive debugger (`vre-debug`)"
license = "Apache-2.0"

[[bin]]
name = "vre"
path = "src/main.rs"

[[bin]]
name = "vre-debug"
path = "src/bin/vre-debug.rs"

[dependencies]
vre-core = { path = "../vre-core" }
vre-compiler = { path = "../vre-compiler" }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }
serde_yaml = "0.9"
toml = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }
base64 = "0.22"
ureq = { version = "2.10", features = ["tls"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4", features = ["derive", "color", "suggestions"] }
tokio = { version = "1", features = ["full"] }
