[package]
name = "vre-core"
version = "0.2.0"
edition = "2021"
description = "Vyauma Runtime Engine — Core bytecode VM, heap, stack, and capability system"
license = "Apache-2.0"

[lib]
name = "vre_core"
path = "src/lib.rs"

[dependencies]
mio = { version = "1.2.1", features = ["os-poll", "net"] }
region = "3.0.0"
