[package]
name = "vre-core"
version = "0.2.0"
edition = "2021"
description = "Vyauma Runtime Engine — Core bytecode VM, heap, stack, and capability system"
license = "Apache-2.0"

[lib]
name = "vre_core"
path = "src/lib.rs"

[dependencies]
ctrlc = "3.4"
libloading = "0.8"
mio = { version = "1.2.1", features = ["os-poll", "net"] }
notify = "6.1"
region = "3.0.0"
ureq = { version = "2.10", features = ["tls"] }
tungstenite = { version = "0.24", features = ["native-tls"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
