[package]
name = "vre-core"
version = "0.2.0"
edition = "2021"
description = "Vyauma Runtime Engine — Core bytecode VM, heap, stack, and capability system"
license = "Apache-2.0"

[lib]
name = "vre_core"
path = "src/lib.rs"

[dependencies]
ctrlc = "3.4"
libloading = "0.8"
mio = { version = "1.2.1", features = ["os-poll", "net"] }
notify = "6.1"
region = "3.0.0"
ureq = { version = "2.10", features = ["tls"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
uuid = { version = "1.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
mysql = "24.0"
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement", "Node"] }
