[package]
name = "vyauma-analyzer"
version = "0.1.0"
edition = "2021"
description = "Vyauma Language Server (LSP)"

[[bin]]
name = "vyauma-analyzer"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vre-compiler = { path = "../vre-compiler" }
